Fixed text search align

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1556,6 +1556,7 @@ footer {
         font-weight: bold;
         font-family: "Gotham Pro";
         caret-color: #fbcb08;
+        text-align: center;
     }
     #btnNavbarSearch {
         background: #ffffff;
